--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
+body {
+    font-family: "montserrat";
+    text-align: center;
+}
+
+
+
 
 /*navigation-bar*/
 
@@ -7,16 +14,13 @@
 }
 
 .nav-link {
-
     font-size: 1.3rem;
-    font-family: Montserrat;
     font-weight: 100;
     color: black;
 }
 
 
 .nav-item {
-
     padding-right: 50px;
 }
 
@@ -34,8 +38,8 @@
 
 /*Title*/
 
-h1 {
-    font-family: Montserrat;
+.big-heading {
+    text-align: left;
     color: white;
     font-size: 4.5rem;
     line-height: 1.5;
@@ -44,12 +48,17 @@ h1 {
     width: 90%;
 }
 
+.section-heading {
+    font-size:2.5rem;
+    line-height: 1.5;
+    font-weight: bold;
+}
+
 #title {
     background-color: #ff4c68;
 }
 
 .title-image {
-
     transform: rotate(20deg);
     margin-top: 70px;
     margin-left: 80px;
@@ -71,7 +80,6 @@ h1 {
 }
 
 .feature-box {
-    text-align: center;
     padding: 8%;
 }
 
@@ -85,7 +93,6 @@ h1 {
 }
 
 .feature-titles {
-    font-family: Montserrat;
     font-weight: bold;
     font-size: 1.5rem;
 }
@@ -97,12 +104,10 @@ h1 {
 /* Testimonial-Section*/
 
 #testimonials { 
-    text-align: center;
     background-color: #ef8172;
     color: #fff;
 }
-h2 {
-    font-family: Montserrat;
+.testimonial-text {
     font-weight: bold;
     font-size: 2.5rem;
     line-height: 1.5;
@@ -120,7 +125,6 @@ h2 {
 
 #press {
     background-color: #ef8172;
-    text-align: center;
     padding-bottom: 3%;
 }
 
@@ -133,15 +137,16 @@ h2 {
 
 #pricing {
 padding: 100px;
-text-align: center;
+}
+
+.pricing-text {
+    font-size: 2.5rem;
+    line-height: 1.5;
 }
 
 .pricing-column {
     padding: 3% 2%;
 }
-
-
-
 
 
 /*Call to Action Section*/ 
@@ -150,11 +155,9 @@ text-align: center;
     width: 80%;
     height: 300px;
     background-color: #ff4c68;
-    text-align: center;
 }
 
 #cta-title {
-    font-family: Montserrat;
     font-size: 3rem;
     font-weight: 900;
     color: white;
@@ -165,7 +168,6 @@ text-align: center;
 /*footer*/ 
 
 #footer {
-    text-align: center;
     margin-top: 40px;
 }
 
